syntax = "proto3";

option go_package = "protogen/merchant";

message ReqTransItems {
    string   ItemID     = 1     [json_name="item_id"];
    string   Discount   = 2     [json_name="discount"];
    string   Quantity   = 3     [json_name="quantity"];
    string   CCNumber   = 4     [json_name="cc_number"];
    string   CVV        = 5     [json_name="cvv"];
    string   Amount     = 6     [json_name="amount"];
    string   Price      = 7     [json_name="price"];
    string   Name       = 8     [json_name="name"];
    string   Type       = 9     [json_name="type"];
    string   Percentage = 10    [json_name="percentage"];
}

message ResTransItems {
    string   ID         = 1     [json_name="item_id"];
    string   Name       = 2     [json_name="item_name"];
    string   Quantity   = 3     [json_name="quantity"];
    string   CC         = 4     [json_name="cc_number"];
}

message ReqCallbackItems {
    string   ItemID     = 1     [json_name="item_id"];
    string   Discount   = 2     [json_name="discount"];
    string   Quantity   = 3     [json_name="quantity"];
    string   CCNumber   = 4     [json_name="cc_number"];
    string   Amount     = 5     [json_name="amount"];
}

message ResCallbackItems {
    string   ID         = 1     [json_name="item_id"];
    string   Name       = 2     [json_name="item_name"];
    string   Quantity   = 3     [json_name="quantity"];
    string   CCNumber   = 4     [json_name="cc_number"];
    string   Code       = 5     [json_name="code"];
}

message ReqTransItemsModel{
    string          Request = 1 [json_name="request"];
}

message ResMerchantTransModel {
    string          Message = 1 [json_name="message"];
    int32           Code    = 2 [json_name="code"];
    string          Data    = 3 [json_name="data"];
}

service TransServices {
    rpc TransItems(ReqTransItemsModel) returns (ResMerchantTransModel);
}
